<resources>
    <string name="app_name">SiKarir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MENU -->
    <string name="home_menu">Home</string>
    <string name="catalog_menu">Catalog</string>
    <string name="quiz_menu">Quiz</string>
    <string name="settings_menu">Settings</string>

    <!-- LOGO -->
    <string name="si_logo">Si</string>
    <string name="karir_logo">Karir.</string>

    <!-- HOME ACTIVITY -->
    <string name="greeting_template">Selamat pagi, %s!</string>
    <string name="rekomendasi_home_text">Rekomendasi Utama Karir</string>
    <string name="jurusan_text_home">Program Studi</string>
    <string name="button_lihat_semua">Lihat Semua</string>
    <string name="description_career_card">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec sapien vitae magna cursus fringilla ac et mi</string>

    <!-- WELCOME ACTIVITY -->
    <string name="title_welcome">Selamat Datang!</string>
    <string name="description_welcome">Aplikasi rekomendasi karir untuk anda. Temukan jalur karir yang sesuai dengan minat dan keterampilan Anda melalui kuis personalisasi dan informasi profesi yang detail.</string>
    <string name="button_welcome">Lanjut</string>

    <!-- LOGIN FRAGMENT -->
    <string name="title_login">Selamat Datang Kembali!</string>
    <string name="subtitle_login">Masuk kembali ke akunmu</string>
    <string name="login_password_hint">Password</string>
    <string name="login_question">Belum memiliki akun?</string>
    <string name="register_button_text">Daftar</string>
    <string name="button_login">Masuk</string>
    <string name="login_username_hint">Username</string>

    <!-- REGISTER FRAGMENT -->
    <string name="title_register">Selamat Datang!</string>
    <string name="subtitle_register">Daftarkan akunmu</string>
    <string name="login_button_text">Masuk</string>
    <string name="register_question">Sudah memiliki akun?</string>
    <string name="button_register">Daftar</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_username_hint">Username</string>

    <!-- ITEM_MAJOR -->
    <string name="title_jurusan_card">Jurusan</string>
    <string name="title_university_card">Universitas</string>
    <string name="answer_quiz_card">Jawaban</string>
    <string name="tab_text_1">Karir</string>
    <string name="tab_text_2">Jurusan</string>

    <!-- ITEM_CAREER -->
    <string name="title_career_card">Software Engineering</string>
    <string name="arrow_description">Arrow right</string>

    <!-- CAREER FRAGMENT -->
    <string name="rekomendasi_karir_text">Rekomendasi Karir Anda</string>
    <string name="daftar_karir_text">Daftar Karir</string>

    <!-- MAJOR FRAGMENT -->
    <string name="title_major_card">S1 Sistem Informasi</string>
    <string name="title_major_text">Daftar Jurusan</string>

    <!-- SEARCH BAR -->
    <string name="searchbar_hint_karir">Masukkan karir</string>
    <string name="searchbar_hint_major">Masukkan jurusan</string>
    <string name="ambil_quiz_str">Ambil Quiz</string>
    <string name="str_not_taken">Belum ada rekomendasi, silahkan ambil quiz!</string>
    <string name="img_not_taken">img_not_taken</string>

    <!-- EDIT ACCOUNT -->
    <string name="edit_account_button_text">Ubah</string>
    <string name="edit_username_hint">Username</string>
    <string name="edit_name_hint">Name</string>
    <string name="edit_email_hint">Email</string>
    <string name="edit_password_hint">Password</string>
    <string name="quiz_history_text">Riwayat Kuis</string>

    <!-- ACCOUNT SETTINGS -->
    <string name="quiz_history">Quiz 1</string>
    <string name="quiz_date">5 Januari 2024</string>
    <string name="title_akun_setting">Akun</string>
    <string name="title_bahasa_setting">Bahasa</string>
    <string name="title_dark_mode_setting">Mode Gelap</string>
    <string name="title_logout_setting">Logout</string>

    <string name="logout_title">Keluar</string>
    <string name="confirm_logout">Apakah anda yakin ingin keluar?</string>
    <string name="confirmed_logout">Yakin</string>
    <string name="not_logout">Tidak</string>
    <string name="selamat_pagi_s">Selamat Pagi, %s!</string>
    <string name="selamat_siang_s">Selamat Siang, %s!</string>
    <string name="selamat_sore_s">Selamat Sore, %s!</string>
    <string name="selamat_malam_s">Selamat Malam, %s!</string>

    <!-- QUIZ QUESTIONS -->
    <string name="quiz_vr" translatable="false">Verbal Reasoning</string>
    <string name="quiz_sa" translatable="false">Spatial Aptitude</string>
    <string name="quiz_pa" translatable="false">Perceptual Aptitude</string>
    <string name="quiz_na" translatable="false">Numerical Aptitude</string>
    <string name="quiz_ls" translatable="false">Likert Scale</string>
    <string name="quiz_ar" translatable="false">Abstract Reasoning</string>
    <string name="quiz_starter_title">Yuk, cari tahu karir rekomendasi untukmu!</string>
    <string name="quiz_starter_subtitle">Silahkan tekan tombol mulai quiz dibawah</string>
    <string name="start_btn_quiz">Mulai Quiz</string>
    <string name="quiz_pointer" translatable="false">%s/100</string>
    <string name="str_not_taken_account">Belum ada riwayat quiz, silahkan ambil quiz!</string>
    <string name="start_quiz">Mulai Quiz</string>
    <string name="validate_start_quiz">Quiz ini berisikan 100 soal. Dengan menyelesaikan ini, kamu akan mendapatkan rekomendasi karir yang cocok untukmu.</string>
    <string name="start_quiz_btn">Ya</string>
    <string name="cancel_quiz_btn">Tidak</string>
    <string name="exit_quiz">Keluar Quiz</string>
    <string name="validate_exit_quiz">Apakah kamu yakin ingin keluar? jawaban kamu tidak akan tersimpan</string>

    <!-- ADAPTER -->
    <string name="retry">Coba Lagi</string>

    <!-- LANGUAGE ACTIVITY -->
    <string name="choose_language_text">Lanjut</string>
    <string name="lan_indo">Bahasa Indonesia</string>
    <string name="lan_eng">Bahasa Inggris</string>
    <string name="choose_language">Pilih Bahasa</string>

</resources>