<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/start_quiz"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/quiz_starter"/>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:textAlignment="center"
        android:text="@string/validate_start_quiz"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnNo"
            android:backgroundTint="@color/yellow_primary"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel_quiz_btn"/>

        <Button
            android:id="@+id/btnYes"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz_btn"/>
    </LinearLayout>
</LinearLayout>