<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.notaken.QuizNotTakenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="98dp"
            android:contentDescription="@string/img_not_taken"
            android:src="@drawable/ic_catalog_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_not_taken"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/ubuntu_bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/yellow_primary"
            android:text="@string/ambil_quiz_str"
            android:textColor="@color/purple_primary"
            android:fontFamily="@font/ubuntu_bold" />

    </LinearLayout>

</FrameLayout>
