<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.account.EditAccountActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar_account"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/yellow_primary"/>

    <ImageView
        android:id="@+id/btnEditImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@id/input_name_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/iv_avatar_account"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar_account"
        app:layout_constraintVertical_bias="2" />

    <com.c241ps294.sikarir.ui.customview.NameField
        android:id="@+id/input_name_edit"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/register_name_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <com.c241ps294.sikarir.ui.customview.UsernameField
        android:id="@+id/input_username_edit"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/register_username_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <com.c241ps294.sikarir.ui.customview.EmailField
        android:id="@+id/input_email_edit"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/register_email_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_username_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <com.c241ps294.sikarir.ui.customview.PasswordField
        android:id="@+id/input_password_edit"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_email_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/edit_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow_primary"
        android:text="@string/edit_account_button_text"
        android:textColor="@color/purple_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_edit"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>